--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,8 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+
     SEI <LAbel>SEI LA</LAbel>
+
+    Vitor
+    Sei la
+
 </body>
 </html>
-=======
->>>>>>> parent of 0021d6c (Index Test)
